fix instruction in modify page

--- a/templates/modify.html
+++ b/templates/modify.html
@@ -69,15 +69,15 @@
                         <input type="text" ng-model="about.teacher.resume.educational_background">
                     </div>
                     <div class="field">
-                        <label>經歷(請以換行區分課程)</label>
+                        <label>經歷(請以換行區分)</label>
                         <textarea rows="4" ng-model="about.teacher.resume.experience"></textarea>
                     </div>
                     <div class="field">
-                        <label>專長(請以換行區分課程)</label>
+                        <label>專長(請以換行區分)</label>
                         <textarea rows="4" ng-model="about.teacher.resume.speciality"></textarea>
                     </div>
                     <div class="field">
-                        <label>研究興趣(請以換行區分課程)</label>
+                        <label>研究興趣(請以換行區分)</label>
                         <textarea rows="4" ng-model="about.teacher.resume.research"></textarea>
                     </div>
                 </form>
