--- a/templates/members.html
+++ b/templates/members.html
@@ -1,6 +1,6 @@
 <div ng-controller="memberCtrl" ng-init="init_member()">
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in visiting_scholars">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -18,9 +18,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in post_docs">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -38,9 +37,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in doctors">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -58,9 +56,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in masters">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -78,9 +75,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in assistants">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -98,9 +94,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in formers">
                 <div class="image">
                     <img ng-src="{{member.img}}">
@@ -118,9 +113,8 @@
             </div>
         </div>
     </div>
-    <br />
     <div class="row" >
-        <div class="ui link cards">
+        <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in none">
                 <div class="image">
                     <img ng-src="{{member.img}}">
