fix bug in delete course

--- a/templates/modify.html
+++ b/templates/modify.html
@@ -146,7 +146,7 @@
                         <textarea ng-model="course.description" placeholder="課程描述"></textarea>
                     </div>
                     <div class="field centered">
-                        <div class="red ui labeled icon button" ng-click="delete_course()">
+                        <div class="red ui labeled icon button" ng-click="delete_course(course)">
                             <i class="icon remove"></i>刪除課程
                         </div>
                     </div>
