change img path to img forlder as default

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 <div class="ui centered stackable grid">
     <div class="row" ng-controller="aboutCtrl" ng-init="init_about()">
         <div class="eight wide column">
-            <img class="ui centered medium rounded image" ng-src="{{teacher.img}}">
+            <img class="ui centered medium rounded image" ng-src="img/{{teacher.img}}">
             <div class="ui top attached tabular menu">
                 <a class="active item" data-tab="information">個人資訊</a>
                 <a class="item" data-tab="history">簡歷</a>
