--- a/templates/members.html
+++ b/templates/members.html
@@ -3,7 +3,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in visiting_scholars">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -22,7 +22,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in post_docs">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -41,7 +41,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in doctors">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -60,7 +60,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in masters">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -79,7 +79,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in assistants">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -98,7 +98,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in formers">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
@@ -117,7 +117,7 @@
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in none">
                 <div class="image">
-                    <img ng-src="{{member.img}}">
+                    <img ng-src="img/{{member.img}}">
                 </div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
