add research subject to every member

--- a/templates/members.html
+++ b/templates/members.html
@@ -11,6 +11,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -30,6 +31,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -49,6 +51,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -68,6 +71,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -87,6 +91,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -106,6 +111,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
@@ -125,6 +131,7 @@
                         <span class="date">{{ member.start }} ~ {{ member.end }}</span>
                     </div>
                     <div class="description">{{ member.title }}</div>
+                    <div class="description">{{ member.subject }}</div>
                 </div>
                 <div class="extra content">
                     <a><i class="mail icon"></i>{{ member.mail }}</a>
