--- a/templates/modify.html
+++ b/templates/modify.html
@@ -122,6 +122,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="field">
+                        <input type="text" ng-model="member.subject" placeholder="研究主題">
+                    </div>
                 </div>
                 <div class="field centered">
                     <div class="green ui labeled icon button" ng-click="add_member()">
