--- a/templates/members.html
+++ b/templates/members.html
@@ -2,9 +2,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in visiting_scholars">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -22,9 +20,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in post_docs">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -42,9 +38,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in doctors">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -62,9 +56,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in masters">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -82,9 +74,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in assistants">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -102,9 +92,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in formers">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
@@ -122,9 +110,7 @@
     <div class="row" >
         <div class="ui link cards center_cards">
             <div class="ui card" ng-repeat="member in none">
-                <div class="image">
-                    <img ng-src="img/{{member.img}}">
-                </div>
+                <div class="image" style="background-image:url(img/{{member.img}})"></div>
                 <div class="content">
                     <a class="header">{{ member.name }}</a>
                     <div class="meta">
