change all member title to english

--- a/templates/directive/titleDropdown.html
+++ b/templates/directive/titleDropdown.html
@@ -2,11 +2,11 @@
     <i class="dropdown icon"></i>
     <div class="text">{{ member.title }}</div>
     <div class="menu">
-        <div class="item" ng-click="member.title='訪問學者'">訪問學者</div>
-        <div class="item" ng-click="member.title='博士後研究員'">博士後研究員</div>
-        <div class="item" ng-click="member.title='博士生'">博士生</div>
-        <div class="item" ng-click="member.title='碩士生'">碩士生</div>
-        <div class="item" ng-click="member.title='專任助理'">專任助理</div>
-        <div class="item" ng-click="member.title='畢業成員'">畢業成員</div>
+        <div class="item" ng-click="member.title='Visiting Scholar'">Visiting Scholar</div>
+        <div class="item" ng-click="member.title='Postdoc'">Postdoc</div>
+        <div class="item" ng-click="member.title='Ph.D'">Ph.D</div>
+        <div class="item" ng-click="member.title='Master'">Master</div>
+        <div class="item" ng-click="member.title='Assistant'">Assistant</div>
+        <div class="item" ng-click="member.title='Alumni'">Alumni</div>
     </div>
 </div>
