fix bug in repeat same text

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,7 @@
 	background-size: cover !important;
 	background-position: center !important;
 }
+
+.content .description {
+	text-align: left;
+}
