--- a/templates/project.html
+++ b/templates/project.html
@@ -1,5 +1,6 @@
 <div ng-controller="projectCtrl" ng-init="init_project()">
     <div class="row ui segment" ng-repeat="project in projects">
+        <h2 class="ui h2">{{ project.en_name }}</h2>
         <h2 class="ui h2">{{ project.name }}</h2>
         <a class="ui teal tag label" ng-if="project.agency">{{ project.agency }}</a>
         <a class="ui tag label" ng-if="project.start||project.end">{{ project.start }} ~ {{ project.end }}</a>
